EnvironmentSimulator/Libraries/esminiLib/esminiLib.hpp

typedef uint32_t id_t;
typedef struct
{
    int    id;              
    int    model_id;        
    int    ctrl_type;       
    double timestamp;       
    double x;               
    double y;               
    double z;               
    double h;               
    double p;               
    double r;               
    id_t   roadId;          
    id_t   junctionId;      
    double t;               
    int    laneId;          
    double laneOffset;      
    double s;               
    double speed;           
    double centerOffsetX;   
    double centerOffsetY;   
    double centerOffsetZ;   
    double width;           
    double length;          
    double height;          
    int    objectType;      
    int    objectCategory;  
    double wheel_angle;     
    double wheel_rot;       
    int    visibilityMask;  
} SE_ScenarioObjectState;
typedef struct
{
    double global_pos_x;       
    double global_pos_y;       
    double global_pos_z;       
    double local_pos_x;        
    double local_pos_y;        
    double local_pos_z;        
    double angle;              
    double road_heading;       
    double road_pitch;         
    double road_roll;          
    double trail_heading;      
    double curvature;          
    double speed_limit;        
    id_t   roadId;             
    id_t   junctionId;         
    int    laneId;             
    double laneOffset;         
    double s;                  
    double t;                  
    int    road_type;          
    int    road_rule;          
    int    lane_type;          
    double trail_wheel_angle;  
} SE_RoadInfo;
typedef struct
{
    double ds;             
    double dt;             
    int    dLaneId;        
    double dx;             
    double dy;             
    bool   oppositeLanes;  
} SE_PositionDiff;
typedef struct
{
    double x;
    double y;
    double z;
    double h;
    double p;
    double speed;
    double wheel_rotation;
    double wheel_angle;
} SE_SimpleVehicleState;
typedef struct
{
    int         id;           
    double      x;            
    double      y;            
    double      z;            
    double      z_offset;     
    double      h;            
    int         roadId;       
    double      s;            
    double      t;            
    const char *name;         
    int         orientation;  
    double      length;       
    double      height;       
    double      width;        
} SE_RoadSign;
typedef struct
{
    int fromLane;
    int toLane;
} SE_RoadObjValidity;
typedef struct
{
    int            width;
    int            height;
    int            pixelSize;    
    int            pixelFormat;  
    unsigned char *data;
} SE_Image;  
typedef enum
{
    REL_DIST_UNDEFINED    = 0,
    REL_DIST_LATERAL      = 1,
    REL_DIST_LONGITUDINAL = 2,
    REL_DIST_CARTESIAN    = 3,
    REL_DIST_EUCLIDIAN    = 4
} SE_RelativeDistanceType;
    SE_DLL_API void SE_RegisterParameterDeclarationCallback(void (*fnPtr)(void *), void *user_data);
    SE_DLL_API int SE_GetRoadInfoGhostTrailTime(int object_id, double time, SE_RoadInfo *data, double *speed_ghost);
    SE_DLL_API int SE_GetDistanceToObject(int object_a_id, int object_b_id, bool free_space, SE_PositionDiff *pos_diff);
    SE_DLL_API int SE_SimpleGetDistanceToObject(const int               object_a_id,
                                                const int               object_b_id,
                                                SE_RelativeDistanceType dist_type,
                                                const double            tracking_limit,
                                                double                 *distance,
                                                double                 *timestamp);
    SE_DLL_API void SE_RegisterObjectCallback(int object_id, void (*fnPtr)(SE_ScenarioObjectState *, void *), void *user_data);
    SE_DLL_API void SE_RegisterConditionCallback(void (*fnPtr)(const char *name, double timestamp));
    SE_DLL_API void SE_RegisterStoryBoardElementStateChangeCallback(void (*fnPtr)(const char *name, int type, int state, const char *full_path));
    SE_DLL_API unsigned int SE_GetNumberOfRoadSigns(id_t road_id);
    SE_DLL_API int SE_GetRoadSign(id_t road_id, unsigned int index, SE_RoadSign *road_sign);
    SE_DLL_API unsigned int SE_GetNumberOfRoadSignValidityRecords(id_t road_id, unsigned int index);
    SE_DLL_API int SE_GetRoadSignValidityRecord(id_t road_id, unsigned int signIndex, unsigned int validityIndex, SE_RoadObjValidity *validity);
    SE_DLL_API const char *SE_GetRoadIdString(id_t road_id);
    SE_DLL_API id_t SE_GetRoadIdFromString(const char *road_id_str);
    SE_DLL_API const char *SE_GetJunctionIdString(id_t junction_id);
    SE_DLL_API id_t SE_GetJunctionIdFromString(const char *junction_id_str);
    SE_DLL_API void SE_ViewerShowFeature(int featureType, bool enable);
    SE_DLL_API void *SE_SimpleVehicleCreate(double x, double y, double h, double length, double speed);
    SE_DLL_API void SE_SimpleVehicleDelete(void *handleSimpleVehicle);
    SE_DLL_API void SE_SimpleVehicleControlBinary(void  *handleSimpleVehicle,
                                                  double dt,
                                                  int    throttle,
                                                  int    steering);  
    SE_DLL_API void SE_SimpleVehicleControlAnalog(void  *handleSimpleVehicle,
                                                  double dt,
                                                  double throttle,
                                                  double steering);  
    SE_DLL_API void SE_SimpleVehicleControlAccAndSteer(void *handleSimpleVehicle, double dt, double acceleration, double steering_angle);
    SE_DLL_API void SE_SimpleVehicleSetThrottleDisabled(void *handleSimpleVehicle, bool disabled);
    SE_DLL_API void SE_SimpleVehicleSetSteeringDisabled(void *handleSimpleVehicle, bool disabled);
    SE_DLL_API void SE_SimpleVehicleSetSpeed(void *handleSimpleVehicle, double speed);
    SE_DLL_API void SE_SimpleVehicleControlTarget(void *handleSimpleVehicle, double dt, double target_speed, double heading_to_target);
    SE_DLL_API void SE_SimpleVehicleSetMaxSpeed(void *handleSimpleVehicle, double speed);
    SE_DLL_API void SE_SimpleVehicleSetMaxAcceleration(void *handleSimpleVehicle, double maxAcceleration);
    SE_DLL_API void SE_SimpleVehicleSetMaxDeceleration(void *handleSimpleVehicle, double maxDeceleration);
    SE_DLL_API void SE_SimpleVehicleSetEngineBrakeFactor(void *handleSimpleVehicle, double engineBrakeFactor);
    SE_DLL_API void SE_SimpleVehicleSteeringScale(void *handleSimpleVehicle, double steeringScale);
    SE_DLL_API void SE_SimpleVehicleSteeringReturnFactor(void *handleSimpleVehicle, double steeringReturnFactor);
    SE_DLL_API void SE_SimpleVehicleSteeringRate(void *handleSimpleVehicle, double steeringRate);
    SE_DLL_API void SE_SimpleVehicleGetState(void *handleSimpleVehicle, SE_SimpleVehicleState *state);
    SE_DLL_API int SE_SaveImagesToRAM(bool state);
    SE_DLL_API int SE_SaveImagesToFile(int nrOfFrames);
    SE_DLL_API int SE_FetchImage(SE_Image *image);
    SE_DLL_API void SE_RegisterImageCallback(void (*fnPtr)(SE_Image *, void *), void *user_data);
    SE_DLL_API int
    SE_WritePPMImage(const char *filename, int width, int height, const unsigned char *data, int pixelSize, int pixelFormat, bool upsidedown);
    SE_DLL_API int
    SE_WriteTGAImage(const char *filename, int width, int height, const unsigned char *data, int pixelSize, int pixelFormat, bool upsidedown);
    SE_DLL_API int SE_AddCustomCamera(double x, double y, double z, double h, double p);