EnvironmentSimulator/Libraries/esminiLib/ESMiniWrapper.cs


        /// <summary>
        /// Gets road information along the ghost object's trail at a specific time.
        /// </summary>
        /// <param name="object_id">The ID of the object.</param>
        /// <param name="time">The simulation time to query.</param>
        /// <param name="data">Reference to a RoadInfo struct to be populated.</param>
        /// <param name="speed_ghost">Output parameter for the ghost's speed at that time.</param>
        /// <returns>0 on success, non-zero on failure.</returns>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetRoadInfoGhostTrailTime(int object_id, double time, ref RoadInfo data, out double speed_ghost);

        /// <summary>
        /// Gets the distance between two objects.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetDistanceToObject(int object_a_id, int object_b_id, [MarshalAs(UnmanagedType.I1)] bool free_space, ref PositionDiff pos_diff);

        /// <summary>
        /// Gets a simplified distance between two objects.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SimpleGetDistanceToObject(int object_a_id, int object_b_id, int dist_type, double tracking_limit, out double distance, out double timestamp);

        public delegate void ObjectCallback(ref ScenarioObjectState state, IntPtr user_data);
        /// <summary>
        /// Registers a callback to be called for a specific object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_RegisterObjectCallback(int object_id, ObjectCallback callback, IntPtr user_data);

        public delegate void ConditionCallback(string name, double timestamp);
        /// <summary>
        /// Registers a callback to be called when a condition is triggered.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_RegisterConditionCallback(ConditionCallback callback);

        public delegate void StateChangeCallback(string name, int type, int state, string full_path);
        /// <summary>
        /// Registers a callback to be called when a storyboard element changes state.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_RegisterStoryBoardElementStateChangeCallback(StateChangeCallback callback);

        /// <summary>
        /// Gets the number of road signs on a specific road.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern uint SE_GetNumberOfRoadSigns(int road_id);

        /// <summary>
        /// Gets information about a specific road sign.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetRoadSign(int road_id, uint index, ref RoadSign road_sign);

        /// <summary>
        /// Gets the number of validity records for a road sign.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern uint SE_GetNumberOfRoadSignValidityRecords(int road_id, uint index);

        /// <summary>
        /// Gets a validity record for a road sign.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetRoadSignValidityRecord(int road_id, uint signIndex, uint validityIndex, ref RoadObjValidity validity);

        /// <summary>
        /// Gets the string ID of a road from its integer ID.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern IntPtr SE_GetRoadIdString(int road_id);

        /// <summary>
        /// Gets the integer ID of a road from its string ID.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetRoadIdFromString(string road_id_str);

        /// <summary>
        /// Gets the string ID of a junction from its integer ID.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern IntPtr SE_GetJunctionIdString(int junction_id);

        /// <summary>
        /// Gets the integer ID of a junction from its string ID.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetJunctionIdFromString(string junction_id_str);

        /// <summary>
        /// Shows or hides a specific feature in the viewer.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_ViewerShowFeature(int featureType, [MarshalAs(UnmanagedType.I1)] bool enable);

        /// <summary>
        /// Creates a simple vehicle model.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern IntPtr SE_SimpleVehicleCreate(double x, double y, double h, double length, double speed);

        /// <summary>
        /// Deletes a simple vehicle model.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SimpleVehicleDelete(IntPtr handleSimpleVehicle);

        /// <summary>
        /// Controls a simple vehicle with binary inputs (throttle/brake, steering).
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SimpleVehicleControlBinary(IntPtr handleSimpleVehicle, double dt, int throttle, int steering);

        /// <summary>
        /// Controls a simple vehicle with analog inputs.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SimpleVehicleControlAnalog(IntPtr handleSimpleVehicle, double dt, double throttle, double steering);

        /// <summary>
        /// Controls a simple vehicle with acceleration and steering angle.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SimpleVehicleControlAccAndSteer(IntPtr handleSimpleVehicle, double dt, double acceleration, double steering_angle);

        /// <summary>
        /// Sets the speed of a simple vehicle.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SimpleVehicleSetSpeed(IntPtr handleSimpleVehicle, double speed);

        /// <summary>
        /// Disables throttle control for a simple vehicle.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SimpleVehicleSetThrottleDisabled(IntPtr handleSimpleVehicle, [MarshalAs(UnmanagedType.I1)] bool disabled);

        /// <summary>
        /// Disables steering control for a simple vehicle.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SimpleVehicleSetSteeringDisabled(IntPtr handleSimpleVehicle, [MarshalAs(UnmanagedType.I1)] bool disabled);

        /// <summary>
        /// Controls a simple vehicle to reach a target speed and heading.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SimpleVehicleControlTarget(IntPtr handleSimpleVehicle, double dt, double target_speed, double heading_to_target);

        /// <summary>
        /// Sets the maximum speed of a simple vehicle.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SimpleVehicleSetMaxSpeed(IntPtr handleSimpleVehicle, double speed);

        /// <summary>
        /// Sets the maximum acceleration of a simple vehicle.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SimpleVehicleSetMaxAcceleration(IntPtr handleSimpleVehicle, double maxAcceleration);

        /// <summary>
        /// Sets the maximum deceleration of a simple vehicle.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SimpleVehicleSetMaxDeceleration(IntPtr handleSimpleVehicle, double maxDeceleration);

        /// <summary>
        /// Sets the engine brake factor for a simple vehicle.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SimpleVehicleSetEngineBrakeFactor(IntPtr handleSimpleVehicle, double engineBrakeFactor);

        /// <summary>
        /// Sets the steering scale for a simple vehicle.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SimpleVehicleSteeringScale(IntPtr handleSimpleVehicle, double steeringScale);

        /// <summary>
        /// Sets the steering return factor for a simple vehicle.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SimpleVehicleSteeringReturnFactor(IntPtr handleSimpleVehicle, double steeringReturnFactor);

        /// <summary>
        /// Sets the steering rate for a simple vehicle.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SimpleVehicleSteeringRate(IntPtr handleSimpleVehicle, double steeringRate);

        /// <summary>
        /// Gets the state of a simple vehicle.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SimpleVehicleGetState(IntPtr handleSimpleVehicle, ref SimpleVehicleState state);

        /// <summary>
        /// Enables or disables saving images to RAM.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SaveImagesToRAM([MarshalAs(UnmanagedType.I1)] bool state);

        /// <summary>
        /// Saves a sequence of images to files.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SaveImagesToFile(int nrOfFrames);

        /// <summary>
        /// Fetches the latest captured image.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_FetchImage(ref Image image);

        public delegate void ImageCallback(ref Image image, IntPtr user_data);
        /// <summary>
        /// Registers a callback to receive captured images.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_RegisterImageCallback(ImageCallback callback, IntPtr user_data);

        /// <summary>
        /// Writes an image to a PPM file.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_WritePPMImage(string filename, int width, int height, IntPtr data, int pixelSize, int pixelFormat, [MarshalAs(UnmanagedType.I1)] bool upsidedown);

        /// <summary>
        /// Writes an image to a TGA file.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_WriteTGAImage(string filename, int width, int height, IntPtr data, int pixelSize, int pixelFormat, [MarshalAs(UnmanagedType.I1)] bool upsidedown);

        /// <summary>
        /// Adds a custom camera at a specific position and orientation.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_AddCustomCamera(double x, double y, double z, double h, double p);
